--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
 		<div class="page-header" align="center">
         	<!-- <a><img src="/static/img/mast.png"></a> -->
             <h1>Breads & Butters</h1>
-        	<h3>Find and share your favorite sandwich creations! Yum.</h3>
+        	<h3>Find and share your favorite butter sandwich creations! Yum.</h3>
         	<a class="btn btn-primary btn-large" href="/share.html">
          	Share a recipe
          </a>
@@ -79,7 +79,7 @@
         			<li class="span1"></li>
         			<li class="span2">
         				<div class="thumbnail">
-        					<img src="http://placehold.it/200x200">
+        					<img src="/static/img/sample_5.png">
         					<div class="caption">
         						<h3>Sandwich Name</h3>
         						<p>
@@ -94,7 +94,7 @@
         			</li>
         			<li class="span2">
         				<div class="thumbnail">
-        					<img src="http://placehold.it/200x200">
+        					<img src="/static/img/sample_1.png">
         					<div class="caption">
         						<h3>Sandwich Name</h3>
         						<p>
@@ -109,7 +109,7 @@
         			</li>
         			<li class="span2">
         				<div class="thumbnail">
-        					<img src="http://placehold.it/200x200">
+        					<img src="/static/img/sample_2.png">
         					<div class="caption">
         						<h3>Sandwich Name</h3>
         						<p>
@@ -124,7 +124,7 @@
         			</li>
         			<li class="span2">
         				<div class="thumbnail">
-        					<img src="http://placehold.it/200x200">
+        					<img src="/static/img/sample_3.png">
         					<div class="caption">
         						<h3>Sandwich Name</h3>
         						<p>
@@ -139,7 +139,7 @@
         			</li>
         			<li class="span2">
         				<div class="thumbnail">
-        					<img src="http://placehold.it/200x200">
+        					<img src="/static/img/sample_4.png">
         					<div class="caption">
         						<h3>Sandwich Name</h3>
         						<p>
