--- a/templates/index.html
+++ b/templates/index.html
@@ -25,14 +25,8 @@
     						<a href="#" class="navbar-link">Username</a>
     					</p>
     					<ul class="nav">
-    						<li class="active">
-    							<a href="#">Home</a>
-    						</li>
     						<li>
-    							<a href="#about">About</a>
-    						</li>
-    						<li>
-    							<a href="#contact">Contact</a>
+    							<a href="#about">Info</a>
     						</li>
     					</ul>
     				</div> <!--nav-collapse-->	
@@ -42,11 +36,10 @@
 
 
     	<!--PAGE HEADER-->
-		<div class="page-header" align="center">
-        	<!-- <a><img src="/static/img/mast.png"></a> -->
+		<div class="page-header">
             <h1>Breads & Butters</h1>
         	<h3>Find and share your favorite butter sandwich creations! Yum.</h3>
-        	<a class="btn btn-primary btn-large" href="/share.html">
+        	<a class="btn btn-primary btn-large" href="/share">
          	Share a recipe
          </a>
         </div> 
@@ -65,7 +58,12 @@
         			<h2>{{ name }}</h2>
         			<h3> by {{ author }} </h3>
         			<p>{{ descrip }}</p>
+                    <a href="#" class="btn btn-primary">Look</a>
+                    <a href="#" class="btn">Like</a>
         		</li>
+
+                
+
         		<li class="span1"></li>
 			</div>
         </div> 
